--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_expandable_fab
-description: Fab button that can show/hide multiple action buttons with animation.
-version: 1.2.0
+description: Speed dial FAB that can show/hide multiple action buttons with animation.
+version: 1.3.0
 homepage: https://github.com/zuvola/flutter_expandable_fab
 
 environment:
