--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_expandable_fab
-description: Speed dial FAB that can show/hide multiple action buttons with animation.
-version: 1.8.1
+description: The speed dial FAB (Floating Action Button) that can animate the display and hiding of multiple action buttons.
+version: 2.0.0
 homepage: https://github.com/zuvola/flutter_expandable_fab
 
 environment:
